--- a/atletiek-nu-api/Cargo.toml
+++ b/atletiek-nu-api/Cargo.toml
@@ -14,3 +14,4 @@ urlencoding = "2.1.2"
 lazy_static = "1.4.0"
 arc-swap = "1.6.0"
 chrono = "0.4.26"
+serde = { version = "1.0.164", features = ["derive"] }
