--- a/atletiek-nu-api/Cargo.toml
+++ b/atletiek-nu-api/Cargo.toml
@@ -15,6 +15,7 @@ lazy_static = "1.4.0"
 arc-swap = "1.6.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 serde = { version = "1.0.164", features = ["derive"] }
+log = { version = "0.4.20", features = [] }
 
 [dev-dependencies]
 criterion = { version = "0.5.1" }
