--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,6 +10,7 @@ rocket = { version = "0.5.0-rc.3", features = ["json"] }
 dashmap = "5.4.0"
 log = "0.4.19"
 serde = { version = "1.0.164", features = ["derive"] }
+leaky-bucket = "1.0.1"
 
 [dependencies.atletiek_nu_api]
 path = "../atletiek-nu-api"
