--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,16 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  create-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: taiki-e/create-gh-release-action@v1
+        with:
+          # (required) GitHub token for creating GitHub Releases.
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: ${{ git rev-parse --short HEAD }}
+
   build:
     strategy:
       matrix:
@@ -15,21 +25,19 @@ jobs:
           # linux x86
           - target: x86_64-unknown-linux-gnu
             os: 'ubuntu-latest'
-            binary: 'target/release/api'
             
           # windows x86
           - target: x86_64-pc-windows-gnu
             os: windows-latest
-            binary: 'target/release/api.exe'
             
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --release --bin api --target ${{ matrix.target }}
-    - name: Upload binary artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: dist-without-markdown
-        path: ${{ matrix.binary }}
+      - uses: actions/checkout@v4
+      - uses: taiki-e/upload-rust-binary-action@v1
+        with:
+          # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
+          # Note that glob pattern is not supported yet.
+          bin: api
+          # (required) GitHub token for uploading assets to GitHub Releases.
+          token: ${{ secrets.GITHUB_TOKEN }}
