this better work

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,8 +1,12 @@
 name: build-api-binary
 
+permissions:
+  contents: write
+
 on:
   push:
-    branches: [ "main" ]
+    tags:
+      - v[0-9]+.*
 
 env:
   CARGO_TERM_COLOR: always
@@ -11,15 +15,11 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     steps:
-      - name: get git rev
-        shell: bash
-        run: echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
       - uses: actions/checkout@v4
       - uses: taiki-e/create-gh-release-action@v1
         with:
           # (required) GitHub token for creating GitHub Releases.
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: ${{ env.sha_short }}
 
   build:
     strategy:
@@ -27,7 +27,7 @@ jobs:
         include:
           # linux x86
           - target: x86_64-unknown-linux-gnu
-            os: 'ubuntu-latest'
+            os: ubuntu-latest
             
           # windows x86
           - target: x86_64-pc-windows-gnu
