--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "api"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,6 +11,7 @@ dashmap = "5.4.0"
 log = "0.4.19"
 serde = { version = "1.0.164", features = ["derive"] }
 leaky-bucket = "1.0.1"
+self_update = { version = "0.38.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "compression-zip-bzip2"] }
 
 [dependencies.atletiek_nu_api]
 path = "../atletiek-nu-api"
