--- a/atletiek-nu-api/Cargo.toml
+++ b/atletiek-nu-api/Cargo.toml
@@ -19,6 +19,7 @@ log = { version = "0.4.20", features = [] }
 
 [dev-dependencies]
 criterion = { version = "0.5.1" }
+tokio = { version = "1.32.0", features = ["test-util", "rt-multi-thread", "macros"] }
 
 [[bench]]
 name = "scraping"
