--- a/atletiek-nu-api/Cargo.toml
+++ b/atletiek-nu-api/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "atletiek_nu_api"
 version = "0.2.0"
+description = "A scraping library for the atletiek.nu website"
 edition = "2021"
 authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]
 repository = "https://github.com/zeskeertwee/atletiek-nu-api"
