--- a/atletiek-nu-api/Cargo.toml
+++ b/atletiek-nu-api/Cargo.toml
@@ -2,13 +2,14 @@
 name = "atletiek_nu_api"
 version = "0.2.0"
 description = "A scraping library for the atletiek.nu website"
+readme = "../README.md"
 edition = "2021"
 authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]
 repository = "https://github.com/zeskeertwee/atletiek-nu-api"
 homepage = "https://github.com/zeskeertwee/atletiek-nu-api"
 license = "AGPL-3.0-or-later"
 categories = ["api-bindings"]
-keywords = ["scraping", "api", "atletiek.nu", "athletics"]
+keywords = ["scraping", "api", "athletics"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
