--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,6 +28,10 @@ jobs:
           # linux x86
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
+
+           # Raspberry pi
+           - target: armv7-unknown-linux-gnueabihf
+             os: ubuntu-latest
             
           # windows x86
           - target: x86_64-pc-windows-gnu
