--- a/test-cli/Cargo.toml
+++ b/test-cli/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 atletiek_nu_api = { path = "../atletiek-nu-api" }
+tokio = { version = "1.35.1", features = ["macros"] }
+pretty_env_logger = "0.5.0"
