--- a/api-cfworker/Cargo.toml
+++ b/api-cfworker/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 [dependencies]
 worker = "0.0.15"
 getrandom = { version = "0.2", features = ["js"] }
+urlencoding = "2.1.3"
 
 [dependencies.atletiek_nu_api]
 path = "../atletiek-nu-api"
