--- a/api-cfworker/wrangler.toml
+++ b/api-cfworker/wrangler.toml
@@ -3,7 +3,7 @@ main = "build/worker/shim.mjs"
 compatibility_date = "2023-03-22"
 
 workers_dev = false
-route = { pattern = "[redacted]", zone_id = "[redacted]" }
+route = { pattern = "atnapi.juandomingo.net/*", zone_id = "ead40ffbb9761bb3b9e5ef89b0d3e344" }
 
 [build]
 command = "cargo install -q worker-build && worker-build --release"
