--- a/api-cfworker/Cargo.toml
+++ b/api-cfworker/Cargo.toml
@@ -11,7 +11,7 @@ wasm-opt = false
 crate-type = ["cdylib"]
 
 [dependencies]
-worker = "0.0.18"
+worker = { version = "0.0.18", features = ["d1"] }
 getrandom = { version = "0.2", features = ["js"] }
 urlencoding = "2.1.3"
 
