--- a/api-cfworker/Cargo.toml
+++ b/api-cfworker/Cargo.toml
@@ -11,9 +11,11 @@ wasm-opt = false
 crate-type = ["cdylib"]
 
 [dependencies]
-worker = { version = "0.0.18", features = ["d1"] }
-getrandom = { version = "0.2", features = ["js"] }
+worker = { version = "0.4.1", features = ["d1"] }
+getrandom = { version = "0.2.15", features = ["js"] }
 urlencoding = "2.1.3"
+console_error_panic_hook = "0.1.7"
+git-version = "0.3.9"
 
 [dependencies.atletiek_nu_api]
 path = "../atletiek-nu-api"
