--- a/atletiek-nu-api/Cargo.toml
+++ b/atletiek-nu-api/Cargo.toml
@@ -24,6 +24,8 @@ arc-swap = "1.6.0"
 chrono = { version = "0.4.31", features = ["serde"] }
 serde = { version = "1.0.164", features = ["derive"] }
 log = { version = "0.4.20", features = [] }
+rand = "0.8.5"
+git-version = "0.3.9"
 
 [dev-dependencies]
 criterion = { version = "0.5.1" }
